- fixing image not showing on home-page (try-one)

--- a/style/home.css
+++ b/style/home.css
@@ -14,8 +14,8 @@
 
 
 .hero-image {
-    background-image: url("images/image.jpg");
-    background-color: #cccccc;
+    background-image: url("https://github.com/prajeshElEvEn/Techsaarthi/blob/main/images/image.jpg");
+    /* background-color: #cccccc; */
     height: calc(100vh - 56px - 56px);
     background-repeat: no-repeat;
     background-size: cover;
@@ -198,6 +198,6 @@
     .ftr {
         width: 100vw;
         padding: 0rem 1rem;
-        font-size: 0.8rem;
+        font-size: 1rem;
     }
 }
