--- a/style/iot.css
+++ b/style/iot.css
@@ -106,7 +106,7 @@
     .ftr {
         width: 100vw;
         padding: 0rem 1rem;
-        font-size: 0.8rem;
+        font-size: 1rem;
     }
 }
 
